--- a/src/content/graphos/enterprise/reference-architecture.mdx
+++ b/src/content/graphos/enterprise/reference-architecture.mdx
@@ -5,14 +5,18 @@ description: Reference for Enterprise Deployment of GraphOS
 
 Apollo's Solution Architecture team supplies a reference architecture that is a blueprint to self-hosting the router and subgraphs in an enterprise cloud environment using Kubernetes and Helm.
 
-It consists of the following github repos:
+It consists of the following github repositories:
 
 - [build-a-supergraph](https://github.com/apollosolutions/build-a-supergraph) - The main repository that contains the step-by-step guide to utilizing the architecture and deploying it to AWS or GCP
-- [build-a-supergraph-infra](https://github.com/apollosolutions/build-a-supergraph-infra) - The "temmplate" repository for cloud deployment of the router, collector, grafana, performance tests, and zipkin
+- [build-a-supergraph-infra](https://github.com/apollosolutions/build-a-supergraph-infra) - The "temmplate" repository for cloud deployment of the router, collector, Grafana, performance tests, and Zipkin
 - [build-a-supergraph-subgraph-a](https://github.com/apollosolutions/build-a-supergraph-subgraph-a) and [build-a-supergraph-subgraph-b](https://github.com/apollosolutions/build-a-supergraph-subgraph-b) - Demo sub-graphs for demo purposes
 
+## Design Considerations
+
+...
+
 ## Getting Started
-To get started with the reference architecture, start in the main [build-a-supergraph](https://github.com/apollosolutions/build-a-supergraph) repository and follow the instructions. It will walk you through everything from setup to CI/CD to load testing the resulting architecture.
+To get started with the reference architecture, start in the main [build-a-supergraph](https://github.com/apollosolutions/build-a-supergraph) repository and start with the README. It will walk you through everything from setup to CI/CD to load testing the resulting architecture.
 
 ## Architecture Overview
 The reference architecture utilizes multiple Kubernetes clusters to break the architecture into dev and prod environments. Inside of those environments are pods that host the router and sub graphs.
@@ -486,3 +490,27 @@ flowchart LR
   k6 -.-> tests
   k6 -.-> influxdb
 ```
+
+## Further Reading
+
+...?
+
+## Enterprise trial
+
+You can sign up for a GraphOS Enterprise trial to freely test out _most_ Enterprise features for the duration of the trial period.
+
+<p>
+  <ButtonLink
+    size="lg"
+    colorScheme="indigo"
+    href="https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content"
+    style={{
+      marginRight: '10px'
+    }}
+  >
+    Start an Enterprise trial
+  </ButtonLink>
+  <ButtonLink href="../org/plans/#enterprise-trials" size="lg">
+    See details
+  </ButtonLink>
+</p>
