Added further reading links

--- a/src/content/graphos/enterprise/reference-architecture.mdx
+++ b/src/content/graphos/enterprise/reference-architecture.mdx
@@ -493,7 +493,11 @@ flowchart LR
 
 ## Further Reading
 
-...?
+- [Router Introduction](https://www.apollographql.com/docs/router/)
+- [Enterprise Features](https://www.apollographql.com/docs/router/enterprise-features)
+- [GraphOS Reporting](https://www.apollographql.com/docs/router/configuration/apollo-telemetry)
+- [OpenTelemetry Tracing](https://www.apollographql.com/docs/router/configuration/tracing)
+- [Managing Apollo Router resources in Kubernetes](https://www.apollographql.com/docs/technotes/TN0016-router-resource-management/)
 
 ## Enterprise trial
 
