Typos and wording updates

--- a/src/content/graphos/enterprise/reference-architecture.mdx
+++ b/src/content/graphos/enterprise/reference-architecture.mdx
@@ -3,15 +3,17 @@ title: Reference Architecture
 description: Reference for Enterprise Deployment of GraphOS
 ---
 
-Apollo's Solution Architecture team supplies a reference architecture that is a blueprint to self-hosting the router and subgraphs in an enterprise cloud environment using Kubernetes and Helm.
+Apollo supplies a reference architecture that is a blueprint to self-hosting the router and subgraphs in an enterprise cloud environment using Kubernetes and Helm.
 
-It consists of the following github repositories:
+It consists of the following Github repositories:
 
 - [build-a-supergraph](https://github.com/apollosolutions/build-a-supergraph) - The main repository that contains the step-by-step guide to utilizing the architecture and deploying it to AWS or GCP
-- [build-a-supergraph-infra](https://github.com/apollosolutions/build-a-supergraph-infra) - The "temmplate" repository for cloud deployment of the router, collector, Grafana, performance tests, and Zipkin
-- [build-a-supergraph-subgraph-a](https://github.com/apollosolutions/build-a-supergraph-subgraph-a) and [build-a-supergraph-subgraph-b](https://github.com/apollosolutions/build-a-supergraph-subgraph-b) - Demo sub-graphs for demo purposes
+- [build-a-supergraph-infra](https://github.com/apollosolutions/build-a-supergraph-infra) - The "template" repository for Kubernetes deployment of the router, collector, Grafana, performance tests, and Zipkin
+- [build-a-supergraph-subgraph-a](https://github.com/apollosolutions/build-a-supergraph-subgraph-a) and [build-a-supergraph-subgraph-b](https://github.com/apollosolutions/build-a-supergraph-subgraph-b) - Demo sub-graphs for demonstration purposes
 
 ## Design Considerations
+
+Val: I'd add a blurb on where GraphOS fits into a modern cloud-native stack. This should set the scene for how this arch has been built and the choices we made.
 
 ...
 
