--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -14,9 +14,12 @@ To complete these steps, it's helpful to have one of the following available:
 
 ## 1. Create your Apollo account
 
-<blockquote>
+**GraphOS Studio** is the primary web interface for interacting with the GraphOS platform. We'll use Studio in every step of this tutorial, starting with creating a Studio account.
 
-**If you already have an Apollo account,** and you created your organization prior to October 2022, you might need to **create a new organization** to create cloud supergraphs:
+<Note>
+
+If you already have an Apollo account, you can skip to [creating your first supergraph](#2-create-your-first-supergraph).
+If your account is part of an organization created prior to October 2022, you might need to **create a new organization** to create cloud supergraphs:
 
 <img
   src="../../img/organization-list.jpg"
@@ -27,40 +30,29 @@ To complete these steps, it's helpful to have one of the following available:
 
 _Some_ legacy organizations can upgrade to a current plan. [See details.](../org/plans#upgrading-to-a-current-plan)
 
-</blockquote>
-
-**Apollo Studio** is the primary web interface for interacting with the GraphOS platform. We'll use Studio in every step of this tutorial, starting with creating an account.
+</Note>
 
 1. Go to [studio.apollographql.com](https://studio.apollographql.com/?referrer=docs-content) and click **Let's get started**.
 
-2. Choose a signup method (GitHub or username/password).
+2. Choose a signup method—either using GitHub or with an email and password.
 
-   Studio then shows a signup form (its details vary depending on your signup method):
+   Studio then shows a signup form. Its details vary depending on your signup method:
 
    <img
      src="../../img/signup-form.jpg"
      class="screenshot"
      alt="Studio signup form"
-     width="400"
+     width="300"
    />
 
-3. Complete the signup form.
-
-   - If you want to customize your organization's details (such as its name or ID), you can uncheck **Create an organization for my automatically**.
-
-4. Click **Create Account**.
-
-You're all set! Studio automatically redirects you to your newly created organization, which is on the **Serverless (Free)** plan by default.
+3. Complete the form, and click **Create Account**. By default, your account is on the [**Serverless (Free)** plan](../org/plans/#current-plans).
 
 ## 2. Create your first supergraph
 
-You now have an Apollo Studio organization, but it doesn't contain any graphs yet. Let's create your first **cloud supergraph**, which will incorporate your existing GraphQL API.
+You now have a GraphOS Studio account, but it doesn't contain any graphs yet. The next steps guide you to creating a **cloud supergraph**.
+A cloud supergraph automatically provisions a GraphOS-managed **router** in front of your API. Clients query your router instead of querying your API directly.
 
-<blockquote>
-
-A **cloud supergraph** automatically provisions a GraphOS-managed **router** in front of your API. Clients query your router instead of querying your API directly.
-
-With this architecture, you can later combine _multiple_ APIs into a single graph, all orchestrated by the router:
+With this architecture, you can later combine multiple APIs into a single graph, all orchestrated by the router:
 
 ```mermaid
 flowchart LR;
@@ -81,18 +73,79 @@ flowchart LR;
   class clients secondary;
 ```
 
-</blockquote>
+If you're creating a new cloud supergraph from an existing account, follow the steps in [that section](#from-an-existing-account).
+Otherwise, continue with the steps below.
 
-1. From your new organization in [Apollo Studio](https://studio.apollographql.com/?referrer=docs-content), navigate to the **Graphs** tab if it isn't already open.
+### From a new account
 
-   Because you haven't created any graphs yet, Studio shows the following:
+1. Next, Studio prompts you to **Connect your API** or **Try a demo graph**. If you have the URL of your running GraphQL server, select **Connect API**. Otherwise, you can select **Try a demo graph**, and Apollo creates a demo graph for you to play with.
 
    <img
-     src="../../img/studio-welcome.jpg"
-     class="screenshot"
-     alt="Welcome message for new Studio orgs"
-     width="400"
+     src="../../img/start-building-with-graphos.jpg"
+     className="screenshot"
+     alt="Studio signup form"
+     width="500"
    />
+
+2. Provide your **GraphQL API's Endpoint URL**. This is the same URL that client applications currently use to query your API. After you provide the URL, Studio attempts to fetch your API's schema from it via introspection. The result of that fetch is shown beneath the text box:
+
+   <img
+     src="../../img/supergraph-schema-fetch.jpg"
+     class="screenshot"
+     alt="Displayed result of API schema fetch"
+     width="500"
+   />
+
+   - If your GraphQL server requires certain HTTP headers for Studio to introspect it, click **Provide HTTP Headers** to specify them.
+
+3. Provide the **name of your service**. The name should reflect the data or capabilities that your API provides and should uniquely identify your API among any _other_ APIs you might add to the supergraph later.
+
+   <Note>
+
+   You cannot change this name later.
+
+   </Note>
+
+4. Click **Continue**.
+
+   - If the **Continue** button is inactive, Studio hasn't obtained your API's schema. If necessary you can bypass introspection by **uploading your schema**. By selecting this option, you can manually copying and pasting your schema, or dragging and dropping a `.gql` or `.graphql` file.
+
+5. Provide a name and ID for your new graph.
+
+   <img
+     src="../../img/supergraph-name-id.jpg"
+     class="screenshot"
+     alt="Entering a name and id"
+     width="500"
+   />
+
+   - The name is displayed throughout Studio and helps your team distinguish between your different graphs. You can change your graph's name at any time.
+   - The ID is **immutable** and must be unique across all of Apollo. Make sure it starts with a letter and contains only letters, numbers, and dashes. You'll use this value to reference your graph from various tools, such as the Rover CLI.
+
+6. Click **Continue**.
+
+You've now created your first cloud supergraph, which is listed in your organization's **Graphs** tab:
+
+<img
+  src="../../img/supergraph-list.jpg"
+  className="screenshot"
+  alt="An organization's list of cloud supergraphs"
+  width="700"
+/>
+
+Your GraphQL API is now the first **subgraph** in that cloud supergraph.
+Skip to [the next step](#3-learn-about-your-variant) to learn about **variants**.
+
+### From an existing account
+
+1. From your account in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content), navigate to the **Graphs** tab if it isn't already open. Select **+ Create New Graph** in the top right.
+
+<img
+  src="../../img/supergraph-list.jpg"
+  className="screenshot"
+  alt="An organization's list of cloud supergraphs"
+  width="700"
+/>
 
 2. Click **Connect your GraphQL API**. The following dialog appears:
 
@@ -106,74 +159,72 @@ flowchart LR;
 3. Provide your GraphQL API's **Endpoint URL**.
 
    - This is the same URL that client applications currently use to query your API.
-   - **🚀 Example setup:** `https://flyby-locations-sub.herokuapp.com/`
+   - If you don't have a URL, you can use `https://flyby-locations-sub.herokuapp.com/` as an example.
 
-   After you provide the URL, Studio attempts to fetch your API's schema from it via introspection. The result of that fetch is shown beneath the text box:
+   After you provide the URL, Studio attempts to fetch your API's schema from it via introspection. Once the fetch succeeds, the input shows a green check.
 
    <img
-     src="../../img/supergraph-schema-fetch.jpg"
+     src="../../img/supergraph-schema-fetch-existing.jpg"
      class="screenshot"
      alt="Displayed result of API schema fetch"
      width="400"
    />
 
-4. **If the schema fetch failed,** click **Advanced options** (otherwise, proceed to the next step):
+4. (Optional) You can click **Advanced options** for the following scenarios:
 
-   <img
-     src="../../img/supergraph-create-advanced-options.jpg"
-     class="screenshot"
-     alt="Advanced options for providing API schema"
-     width="400"
-   />
+- If your GraphQL server requires certain HTTP headers for Studio to introspect it, click **Provide HTTP Headers** to specify them.
+- You can click **Provide your schema directly** to provide your API's schema as plaintext SDL.
+- Finally, you can select **Use local introspection** to provide a local URL and do a one-time introspection of your schema.
 
-   - If your GraphQL server requires certain HTTP headers for Studio to introspect it, click **Provide HTTP Headers** to specify them.
-   - Otherwise, click **Upload your schema directly** to provide your API's schema as plaintext SDL.
+5. Provide a **Subgraph Name** for your API. This name uniquely identifies your API among any _other_ APIs you might add to the supergraph later. The name should reflect the data or capabilities that your API provides.
 
-5. Provide a **Subgraph Name** for your API. This name uniquely identifies your API among any _other_ APIs you might add to the supergraph later.
+   - If you're using the `https://flyby-locations-sub.herokuapp.com/` example URL, you can enter **Locations** as the subgraph name.
 
-   - The name should reflect the data or capabilities that your API provides.
-   - **🚀 Example setup:** `locations`
+   <Note>
+
+   You cannot change this name later.
+
+   </Note>
 
 6. Click **Next**.
 
-   - If the **Next** button is inactive, Studio hasn't obtained your API's schema! Make sure to provide it using one of the methods described in the previous few steps.
+   - If the **Next** button is inactive, Studio hasn't obtained your API's schema! Make sure to provide it using one of the methods described in steps 3 and 4.
 
    The following dialog appears:
 
    <img
-     src="../../img/supergraph-id-name.jpg"
+     src="../../img/supergraph-id-name-existing.jpg"
      class="screenshot"
-     alt="Setting an ID and name for a new supergraph"
+     alt="Setting a name and ID for a new supergraph"
      width="400"
    />
 
-7. Provide an ID and a name for your new supergraph.
+7. Provide a name and ID for your new supergraph.
 
-   - The ID is **immutable** and must be unique across all of Apollo. You'll use this value to reference your supergraph from various tools, such as the Rover CLI.
-   - The name is displayed throughout Studio and helps your team distinguish between your different graphs. You can change your supergraph's name at any time.
+   - The name is displayed throughout Studio and helps your team distinguish between your different graphs. You can change your graph's name at any time.
+   - The ID is **immutable** and must be unique across all of Apollo. Make sure it starts with a letter and contains only letters, numbers, and dashes. You'll use this value to reference your graph from various tools, such as the Rover CLI.
 
 8. Click **Create Supergraph**.
 
-Nice work! You've created your first cloud supergraph, which is now listed in your organization's **Graphs** tab:
+You've now created your first cloud supergraph, which is listed in your organization's **Graphs** tab:
 
 <img
   src="../../img/supergraph-list.jpg"
   className="screenshot"
   alt="An organization's list of cloud supergraphs"
-  width="500"
+  width="700"
 />
 
-Your GraphQL API is now the first **subgraph** in a cloud supergraph. Later, we'll cover how to add _another_ subgraph.
-
-> **Note:** It'll take a few seconds for GraphOS to finish provisioning your new variant's router. Until it's finished, you'll see an **INITIATING ENDPOINT** label next to the variant.
+Your GraphQL API is now the first **subgraph** in that cloud supergraph.
+Continue on to [the next step](#3-learn-about-your-variant) to learn about **variants**.
 
 ## 3. Learn about your variant
 
-When you created your supergraph, you also created its first **variant** (which is named `main`). Every graph in GraphOS has one or more variants. Each variant represents a different environment where the graph runs (such as staging or production).
+When you created your supergraph, you also created its first **variant**—named `current` by default. Every graph in GraphOS has one or more variants. Each variant represents a different environment where the graph runs, such as staging or production.
 
-Let's look at the helpful views that Studio provides for your variant!
+Let's look at the helpful views that Studio provides for your variant:
 
-From your **Graphs** tab, click your graph's `main` variant. This opens the variant's README page.
+From your **Graphs** tab, click your graph's `current` variant. This opens the variant's README page.
 
 The README is great for documenting your supergraph so team members can learn the basics of how to work with it. It supports Markdown syntax like a typical README in a Git repository.
 
@@ -186,9 +237,9 @@ While you're viewing _any_ page for a variant, the following navigation is shown
   width="100"
 />
 
-> You can collapse this navigation to show only icons.
+You can collapse this navigation to show only icons.
 
-We'll cover some of these pages in later steps, but feel free to click around and see what each provides! You can also expand the summary table below:
+We'll cover some of these pages in later steps, but feel free to click around and see what each provides. You can also expand the summary table below.
 
 ### Variant pages in Studio
 
@@ -217,7 +268,7 @@ Go to your variant's **Settings** page, then click **Cloud Router**:
 
 <img
   className="screenshot"
-  alt="Configuring the routing for your cloud supergraph in Apollo Studio"
+  alt="Configuring the routing for your cloud supergraph in GraphOS Studio"
   src="../../img/cloud-routing/configuration-main.jpg"
 />
 
@@ -237,15 +288,23 @@ headers:
 
 Let's modify this default config to work with your clients and your subgraph.
 
-> After you make any necessary changes to your configuration YAML in Studio, make sure to click **Save**.
+<Note>
+
+After you make any necessary changes to your configuration YAML in Studio, make sure to enter `command+S` to save.
+
+</Note>
 
 ### CORS rules
 
-> If no browser-based GraphQL clients will communicate with your supergraph, you can skip this.
+<Note>
+
+If no browser-based GraphQL clients will communicate with your supergraph, you can skip this.
+
+</Note>
 
 The [Cross-Origin Resource Sharing](https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS) (CORS) protocol enables a server to dictate exactly which origins can communicate with it from a web browser.
 
-As shown in the configuration above, by default your router only accepts browser-based requests from Apollo Studio! If other browser-based applications will query your supergraph, you need to modify your CORS settings.
+As shown in the configuration above, by default your router only accepts browser-based requests from GraphOS Studio! If other browser-based applications will query your supergraph, you need to modify your CORS settings.
 
 **To limit browser-based queries to specific domains,** list those domains in the configuration YAML like so:
 
@@ -268,11 +327,19 @@ cors:
   # highlight-end
 ```
 
-> For advanced CORS options, see [Configuring cloud routing](../routing/cloud-configuration#cors-settings).
+<Tip>
+
+For advanced CORS options, see [Configuring cloud routing](../routing/cloud-configuration#cors-settings).
+
+</Tip>
 
 ### Header rules
 
-> If your router doesn't need to provide specific HTTP headers in its requests to your subgraph, you can skip this.
+<Note>
+
+If your router doesn't need to provide specific HTTP headers in its requests to your subgraph, you can skip this.
+
+</Note>
 
 If your subgraph's server requires certain HTTP headers to communicate with it (such as an `Authorization` header), let's specify those headers in the configuration YAML.
 
@@ -316,7 +383,11 @@ headers:
 
 Here, we add two headers: `Authorization` and `X-CUSTOM-HEADER`. The `Authorization` header's value includes the value of a [router-specific secret](#creating-secrets) named `MY_SECRET`.
 
-> Make sure you save any [router-specific secrets](#creating-secrets) _before_ you update your config YAML to include them. Otherwise, your router won't be updated with the new configuration.
+<Note>
+
+Make sure you save any [router-specific secrets](#creating-secrets) _before_ you update your config YAML to include them. Otherwise, your router won't be updated with the new configuration.
+
+</Note>
 
 ## 5. Query your supergraph
 
@@ -334,7 +405,7 @@ Try building a couple of queries and running them against your supergraph. Notic
 
 Because you've created a cloud supergraph, operations you run in the Explorer are sent to the GraphOS-managed **router** that sits in front of your API. Application clients will _also_ query the router instead of querying your API directly.
 
-<blockquote>
+<Note>
 
 **If the Explorer returns errors for all operations,** GraphOS might not be finished provisioning your router. If this is the case, an **INITIATING ENDPOINT** label is shown at the top of the page:
 
@@ -345,7 +416,7 @@ Because you've created a cloud supergraph, operations you run in the Explorer ar
   width="500"
 />
 
-</blockquote>
+</Note>
 
 ## 6. View operation and field metrics
 
@@ -369,10 +440,13 @@ Your supergraph is ready to start receiving client operations! If you have exist
 
 Similarly, any _new_ client applications should use your router's URL.
 
-> ⚠️ **Important considerations:**
->
-> - For all browser-based clients, make sure their origin is allowed in your router's [CORS rules](#cors-rules).
-> - Only update clients that communicate with the correct instance of your GraphQL API! For example, if your API has staging and production instances, only update clients that communicate with the instance used by this supergraph variant.
+<Note>
+
+- For all browser-based clients, make sure their origin is allowed in your router's [CORS rules](#cors-rules).
+
+- Only update clients that communicate with the correct instance of your GraphQL API! For example, if your API has staging and production instances, only update clients that communicate with the instance used by this supergraph variant.
+
+</Note>
 
 Your router's URL is available from the top of your variant's README page:
 
