Add SEO description

--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -1,6 +1,7 @@
 ---
 title: Get started with GraphOS
-description: Create your first cloud supergraph
+subtitle: Create your first cloud supergraph
+description: Learn how to use Apollo GraphOS Studio to create a graph with a GraphOS-managed router in front of your GraphQL API
 ---
 
 Hello! 👋 This quickstart gets you up and running with GraphOS and your first supergraph. **None of this setup requires a paid plan.**
