Update Apollo Studio -> GraphOS Studio and add referrers

--- a/src/content/graphos/basics/platform-api.mdx
+++ b/src/content/graphos/basics/platform-api.mdx
@@ -16,7 +16,7 @@ We'll continue to expand the Platform API with additional GraphOS functionality 
 
 ## API docs
 
-The Platform API is itself represented as a public graph in GraphOS! Documentation for the API (which includes a README and collections of example operations) is available in Apollo Studio.
+The Platform API is itself represented as a public graph in GraphOS! Documentation for the API (which includes a README and collections of example operations) is available in GraphOS Studio.
 
 <p>
   <ButtonLink
