--- a/src/content/graphos/basics/quickstart/next-steps.mdx
+++ b/src/content/graphos/basics/quickstart/next-steps.mdx
@@ -3,7 +3,7 @@ title: Supergraph next steps
 description: Get the most out of GraphOS
 ---
 
-After you [create a supergraph](./cloud/) with Apollo Studio, read below to learn about some of the next steps you should take to get the most out of it and the entire GraphOS platform.
+After you [create a supergraph](./cloud/) with GraphOS Studio, read below to learn about some of the next steps you should take to get the most out of it and the entire GraphOS platform.
 
 > For the most part, you can perform these next steps in any order. But you should definitely start by [installing the Rover CLI](#first-install-the-rover-cli).
 
@@ -21,7 +21,7 @@ See [this article](../graphs/local-development/).
 
 ### Update a subgraph schema
 
-When you first set up your cloud supergraph, Apollo Studio fetches your existing GraphQL API's schema. Your existing API becomes the first **subgraph** in your supergraph:
+When you first set up your cloud supergraph, GraphOS Studio fetches your existing GraphQL API's schema. Your existing API becomes the first **subgraph** in your supergraph:
 
 ```mermaid
 flowchart LR;
@@ -98,7 +98,7 @@ After you make these changes, you can start using powerful federation features i
 
 - [Entities](/federation/entities/) (object types that are defined and resolved across multiple subgraphs)
 - [Federation-specific directives](/federation/federated-types/federated-directives) for sharing types, marking fields as inaccessible, and more
-- [Federated trace reporting](/federation/metrics/) for metrics visualization in Apollo Studio
+- [Federated trace reporting](/federation/metrics/) for metrics visualization in GraphOS Studio
 
 ### Set up continuous delivery
 
