--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -368,7 +368,7 @@ It's time to enable our router to fetch its supergraph schema from GraphOS. To d
     INFO Apollo Router v1.18.0 // (c) Apollo Graph, Inc. // Licensed as ELv2 (https://go.apollo.dev/elv2)
     INFO Anonymous usage data is gathered to inform Apollo product development.  See https://go.apollo.dev/o/privacy for more info.
     INFO Running with *development* mode settings which facilitate development experience (e.g., introspection enabled)
-    INFO Apollo Studio usage reporting is enabled. See https://go.apollo.dev/o/data for details
+    INFO GraphOS Studio usage reporting is enabled. See https://go.apollo.dev/o/data for details
     INFO creating apollo exporter spaceport_endpoint=https://127.0.0.1:62894/
     INFO creating apollo exporter spaceport_endpoint=https://127.0.0.1:62894/
     INFO healthcheck endpoint exposed at http://127.0.0.1:8088/health
