--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -7,7 +7,7 @@ description: In GraphOS
 >
 > [See details about plans.](https://www.apollographql.com/pricing/)
 
-When you [create a cloud supergraph](../quickstart/cloud/#2-create-your-first-supergraph) with Apollo Studio, GraphOS automatically provisions and manages a **router** that sits in front of your GraphQL API:
+When you [create a cloud supergraph](../quickstart/cloud/#2-create-your-first-supergraph) with GraphOS Studio, GraphOS automatically provisions and manages a **router** that sits in front of your GraphQL API:
 
 ```mermaid
 flowchart LR;
