--- a/src/content/graphos/explorer/additional-features.mdx
+++ b/src/content/graphos/explorer/additional-features.mdx
@@ -200,4 +200,4 @@ The Explorer is not currently available for download or on-prem hosting. However
 
 ### Do my Explorer operations pass through Apollo systems?
 
-No. Operations you run in the Explorer are sent directly from your browser to your GraphQL endpoint, _without_ passing through any Apollo systems along the way. Apollo never sees your request headers or response data. For more information, see [Apollo Studio data privacy and compliance](../data-privacy).
+No. Operations you run in the Explorer are sent directly from your browser to your GraphQL endpoint, _without_ passing through any Apollo systems along the way. Apollo never sees your request headers or response data. For more information, see [GraphOS Studio data privacy and compliance](../data-privacy).
