--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -146,7 +146,7 @@ You can define two different types of scripts:
 
 To create a preflight script:
 
-1. [Open Apollo Studio](https://studio.apollographql.com/) and then open the Explorer for the graph and variant you want to create a script for.
+1. [Open GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content) and then open the Explorer for the graph and variant you want to create a script for.
 
 2. Open the Explorer's Settings tab and scroll down to the **Preflight script** section:
 
