--- a/src/content/graphos/explorer/index.mdx
+++ b/src/content/graphos/explorer/index.mdx
@@ -13,7 +13,7 @@ The Explorer is free for all GraphOS organizations. It supports all GraphQL oper
 
 ## Setup
 
-To get started with the Explorer, [create a graph](../quickstart/cloud/#2-create-your-first-supergraph) in Apollo Studio and then navigate to that graph's Explorer page:
+To get started with the Explorer, [create a graph](../quickstart/cloud/#2-create-your-first-supergraph) in GraphOS Studio and then navigate to that graph's Explorer page:
 
 <img
   src="../img/explorer-new-graph.jpg"
