--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -25,7 +25,7 @@ Each [variant](../graphs/#variants) of a graph has its own set of operation coll
 
 To create an operation collection in the Explorer:
 
-1. [Open Studio](https://studio.apollographql.com/) and navigate to the Explorer.
+1. [Open Studio](https://studio.apollographql.com/?referrer=docs-content) and navigate to the Explorer.
 
    <img
      src="../img/operation-collections/list-collections.jpg"
@@ -133,7 +133,7 @@ If you create a [public variant](../graphs/studio-features/#public-variants) of 
 
 ## Sandbox collections
 
-[Apollo Sandbox](./sandbox/) is a special mode of Apollo Studio that doesn't require an Apollo account. If you use Sandbox and _do_ sign in with your Apollo account, you can save personal operation collections that are _specific_ to Sandbox:
+[Apollo Sandbox](./sandbox/) is a special mode of GraphOS Studio that doesn't require an Apollo account. If you use Sandbox and _do_ sign in with your Apollo account, you can save personal operation collections that are _specific_ to Sandbox:
 
 <img
   src="../img/operation-collections/sandbox-collections.jpg"
