--- a/src/content/shared/create-self-hosted-supergraph.mdx
+++ b/src/content/shared/create-self-hosted-supergraph.mdx
@@ -1,4 +1,4 @@
-1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
+1. Go to your organization's **Graphs** tab in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 
 2. Click **Create New Graph** in the top right. Studio displays the following dialog:
 
