--- a/src/content/shared/obtain-graph-api-key.mdx
+++ b/src/content/shared/obtain-graph-api-key.mdx
@@ -2,7 +2,7 @@
 
 > **API keys are secret credentials.** Never share them outside your organization or commit them to version control. Delete and replace API keys that you believe are compromised.
 
-1. Go to [studio.apollographql.com](https://studio.apollographql.com/) and click the graph you want to obtain an API key for.
+1. Go to [studio.apollographql.com](https://studio.apollographql.com/?referrer=docs-content) and click the graph you want to obtain an API key for.
 
 2. **If a "Publish your Schema" dialog appears**, copy the protected value that appears after `APOLLO_KEY=` in the example code block (it begins with `service:`), and you're all set.
 
