--- a/src/content/shared/register-cli.mdx
+++ b/src/content/shared/register-cli.mdx
@@ -1,7 +1,7 @@
 1. If you haven't yet:
 
    - [Install the Rover CLI](/rover/getting-started/)
-   - [Authenticate Rover](/rover/configuring/) with Apollo Studio
+   - [Authenticate Rover](/rover/configuring/) with GraphOS Studio
 
 2. Decide how you'll provide your server's schema to Rover. You can either:
 
