--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -196,7 +196,7 @@ flowchart LR;
 
 <GraphOSEnterpriseRequired />
 
-1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/?referrer=docs-content).
+1. Go to your organization's **Graphs** tab in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 
 2. Click **New Graph** in the top right. Studio displays the following dialog:
 
@@ -233,7 +233,7 @@ Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. 
 
 To distinguish between instances of the same graph running in different environments (such as staging and production), you define multiple **variants** of your graph. Each variant has its own schemas, along with its own change history and metrics.
 
-Each of your graph's variants is shown in [Apollo Studio](https://studio.apollographql.com?referrer=docs-content):
+Each of your graph's variants is shown in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content):
 
 <img
   src="../../img/graph-variants.jpg"
