--- a/src/content/graphos/delivery/github-integration.mdx
+++ b/src/content/graphos/delivery/github-integration.mdx
@@ -33,6 +33,6 @@ For example CI configurations, [see the Rover docs](/rover/ci-cd/).
 
 </Tip>
 
-The `rover subgraph check` command checks for differences in your schema between what's on your current branch and the last version you uploaded to Apollo Studio. If you've removed or changed any types or fields, the command checks whether those changes break any queries that your clients have made recently. If your changes do break any queries, the check fails.
+The `rover subgraph check` command checks for differences in your schema between what's on your current branch and the last version you uploaded to GraphOS Studio. If you've removed or changed any types or fields, the command checks whether those changes break any queries that your clients have made recently. If your changes do break any queries, the check fails.
 
 Because you installed the Apollo Studio app on GitHub, the check you've added shows up as a line in your GitHub checks list. If there are changes in your schema, you can review them by clicking the **Details** link. By enabling schema checks in your continuous integration workflow (such as CircleCI), you're alerting developers of any potential problems directly in their pull requests, thereby giving them critical feedback where it's most useful.
