--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -177,7 +177,7 @@ These are the top-level fields you can include in the options object you pass to
 
 **Required.** The graph ref for the variant you want to use the embedded Explorer with. Has the format `graph-id@variant-name`. This value is automatically populated in the Explorer's embed snippet.
 
-The Explorer fetches this variant's schema from Apollo Studio to populate its Documentation panel and enable code completion.
+The Explorer fetches this variant's schema from GraphOS Studio to populate its Documentation panel and enable code completion.
 
 If you omit this option, the Explorer _does_ still load, but it doesn't know which schema to fetch. This prevents the Explorer from providing critical features like documentation and code completion.
 
