--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -8,15 +8,15 @@ A GraphOS [organization](./) can have any number of members, and each member can
 
 Each organization member has one of the following roles:
 
-| Name                       | Description                                                                                                                                                                                                                                                                                                            | Supported [plan types](https://www.apollographql.com/pricing/) |
-| -------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
-| **Org Admin**              | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                    |                              All                               |
-| **Graph Admin**            | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                            |                        Enterprise only                         |
-| **Contributor**            | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for back-end developers who are authorized to make changes to graphs. _Cannot_ push schema changes to [protected variants](../graphs/studio-features/#protected-variants-enterprise-only).                                                |                        Enterprise only                         |
-| **Documenter**             | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                  |                        Enterprise only                         |
-| **Observer**               | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for back-end developers who are _not_ authorized to make changes to graphs.                                                                                                     |                        Enterprise only                         |
+| Name                | Description                                                                                                                                                                                                                                                                                                                   | Supported [plan types](https://www.apollographql.com/pricing/) |
+| ------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
+| **Org Admin**       | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                           |                              All                               |
+| **Graph Admin**     | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                                   |                        Enterprise only                         |
+| **Contributor**     | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for back-end developers who are authorized to make changes to graphs. _Cannot_ push schema changes to [protected variants](../graphs/studio-features/#protected-variants-enterprise-only).                                      |                        Enterprise only                         |
+| **Documenter**      | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                         |                        Enterprise only                         |
+| **Observer**        | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for back-end developers who are _not_ authorized to make changes to graphs.                                                                                                            |                        Enterprise only                         |
 | **Consumer**        | <p>Has view-only access to the organization's graph _schemas_, but not metrics. Can also execute queries in the Explorer. Intended for application developers building clients against a graph.</p><p>This role is available to all plan types. For legacy Team plans, **Consumer** members do not count as billed users.</p> |                              All                               |
-| **Billing Manager** | <p>Has management access to organization-level configuration and billing. Can also remove members (but not invite them). No access to graphs. [Learn more](#billing-managers)</p><p>This role is available to all paid plan types. For legacy Team plans, **Billing Manager** members do not count as billed users.</p>                       |                All paid plan types               |
+| **Billing Manager** | <p>Has management access to organization-level configuration and billing. Can also remove members (but not invite them). No access to graphs. [Learn more](#billing-managers)</p><p>This role is available to all paid plan types. For legacy Team plans, **Billing Manager** members do not count as billed users.</p>       |                      All paid plan types                       |
 
 Only members with the **Org Admin** role can assign roles to other members. You can see which role you have in a particular organization from your [user settings page](https://studio.apollographql.com/user-settings), or from the organization's Members tab.
 
@@ -29,41 +29,44 @@ You can override a member's organization-wide role for individual graphs. For ex
 Members with the **Graph Admin** or **Org Admin** role can assign graph-specific roles from the Permissions tab of the graph's Settings page.
 
 ### Hidden graphs
+
 If a graph is made [hidden](../graphs/studio-features/#internal-graph-visibility-enterprise-only), then only users with explicit overrides (as well as **Org Admin**s) can see the graph.
 
 ### Graph admin override
+
 The **Graph Admin** and **Org Admin** roles have exactly the same permissions for a particular graph, so you can only grant a **Graph Admin** override, not an (equivalent) **Org Admin** override.
 
 ### Default on graph creation
+
 When **Contributor**s in an organization create a new graph, they are automatically granted the **Graph Admin** role for that graph.
 
 ## Role permissions
 
-| Action                                                             | Org Admin | Graph Admin |                                 Contributor                                 | Observer / Documenter | Consumer |
-| :----------------------------------------------------------------- | :-------: | :---------: | :-------------------------------------------------------------------------: | :-------------------: | :------: |
-| Invite members                                                     |     ✓     |             |                                                                             |                       |          |
-| Remove members                                                     |     ✓     |             |                                                                             |                       |          |
-| View and edit billing information                                  |     ✓     |             |                                                                             |                       |          |
-| Manage organization configuration (name, avatar, etc.)             |     ✓     |             |                                                                             |                       |          |
-| Export [audit logs](./audit-log) (enterprise only)                                            |     ✓     |             |                                                                             |                       |          |
-| Delete the organization                                            |     ✓     |             |                                                                             |                       |          |
-| Manage which users have access to graphs                           |     ✓     |      ✓      |                                                                             |                       |          |
-| Manage graph integrations (Slack, Datadog, etc.)                   |     ✓     |      ✓      |                                                                             |                       |          |
-| View and manage graph API keys                                     |     ✓     |      ✓      |                                                                             |                       |          |
-| Modify schema checks configuration                                 |     ✓     |      ✓      |                                                                             |                       |          |
-| Delete and rename graphs                                           |     ✓     |      ✓      |                                                                             |                       |          |
-| Create and modify [contracts](../delivery/contracts/) and contract variants |     ✓     |      ✓      |                                                                             |                       |          |
-| View existing contracts                                            |     ✓     |      ✓      |                                      ✓                                      |                       |          |
-| Create new variants                                                |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
-| Push schemas to a graph                                            |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
-| Manage Explorer settings (URL, etc)                                |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
-| Create graphs                                |     ✓     |      ✓      |                                      ✓                                      |                       |          |
-| Edit variant READMEs                                               |     ✓     |      ✓      |                                      ✓                                      |    Documenter only    |          |
-| Run [schema checks](../delivery/schema-checks)                              |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
-| See the schemas of subgraphs in federated graphs                   |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
-| View graph usage metrics and traces                                |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
-| View graph schemas and changelogs                                  |     ✓     |      ✓      |                                      ✓                                      |           ✓           |    ✓     |
-| Query graphs with the Explorer                                     |     ✓     |      ✓      |                                      ✓                                      |           ✓           |    ✓     |
+| Action                                                                      | Org Admin | Graph Admin |                                         Contributor                                          | Observer / Documenter | Consumer |
+| :-------------------------------------------------------------------------- | :-------: | :---------: | :------------------------------------------------------------------------------------------: | :-------------------: | :------: |
+| Invite members                                                              |     ✓     |             |                                                                                              |                       |          |
+| Remove members                                                              |     ✓     |             |                                                                                              |                       |          |
+| View and edit billing information                                           |     ✓     |             |                                                                                              |                       |          |
+| Manage organization configuration (name, avatar, etc.)                      |     ✓     |             |                                                                                              |                       |          |
+| Export [audit logs](./audit-log) (enterprise only)                          |     ✓     |             |                                                                                              |                       |          |
+| Delete the organization                                                     |     ✓     |             |                                                                                              |                       |          |
+| Manage which users have access to graphs                                    |     ✓     |      ✓      |                                                                                              |                       |          |
+| Manage graph integrations (Slack, Datadog, etc.)                            |     ✓     |      ✓      |                                                                                              |                       |          |
+| View and manage graph API keys                                              |     ✓     |      ✓      |                                                                                              |                       |          |
+| Modify schema checks configuration                                          |     ✓     |      ✓      |                                                                                              |                       |          |
+| Delete and rename graphs                                                    |     ✓     |      ✓      |                                                                                              |                       |          |
+| Create and modify [contracts](../delivery/contracts/) and contract variants |     ✓     |      ✓      |                                                                                              |                       |          |
+| View existing contracts                                                     |     ✓     |      ✓      |                                              ✓                                               |                       |          |
+| Create new variants                                                         |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
+| Push schemas to a graph                                                     |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
+| Manage Explorer settings (URL, etc)                                         |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
+| Create graphs                                                               |     ✓     |      ✓      |                                              ✓                                               |                       |          |
+| Edit variant READMEs                                                        |     ✓     |      ✓      |                                              ✓                                               |    Documenter only    |          |
+| Run [schema checks](../delivery/schema-checks)                              |     ✓     |      ✓      |                                              ✓                                               |           ✓           |          |
+| See the schemas of subgraphs in federated graphs                            |     ✓     |      ✓      |                                              ✓                                               |           ✓           |          |
+| View graph usage metrics and traces                                         |     ✓     |      ✓      |                                              ✓                                               |           ✓           |          |
+| View graph schemas and changelogs                                           |     ✓     |      ✓      |                                              ✓                                               |           ✓           |    ✓     |
+| Query graphs with the Explorer                                              |     ✓     |      ✓      |                                              ✓                                               |           ✓           |    ✓     |
 
 > Currently, graph usage metrics and traces are not displayed to **Consumer**s via the Studio web app, but they are not blocked at the API layer. We intend to remove this capability from **Consumer**s, but for the time being you should understand that **Consumer**s are not fully prevented from accessing these metrics and traces.
 
@@ -101,13 +104,13 @@ A few operations aren't listed in the table above because they are _only_ suppor
 
 ## Inviting members
 
-**Org Admin**s can invite individual members by email address from your organization's Members tab in [Apollo Studio](https://studio.apollographql.com). Organization admins can also create a persistent **invite link** from the organization's Settings tab, which can be used to invite any number of members. Using either method, an org admin can specify which role a new member receives.
+**Org Admin**s can invite individual members by email address from your organization's Members tab in [GraphOS Studio](https://studio.apollographql.com). Organization admins can also create a persistent **invite link** from the organization's Settings tab, which can be used to invite any number of members. Using either method, an org admin can specify which role a new member receives.
 
-> ⚠️ **Notes**  
+> ⚠️ **Notes**
+>
 > - If your organization uses an identity provider (IdP) for single sign-on (SSO), you should configure access in your IdP rather than via invitations. For example, with Okta, you need to [assign](./sso/okta-integration-guide#assign-users-in-okta) members to your GraphOS Studio integration to give them access. If you've configured a member to have access in your IdP, they can access GraphOS Studio without an invitation link.
 > - **Do not share invite links publicly.** Anyone with the link can join your organization. If an invite link becomes compromised, an admin can replace or disable it from the Settings tab.
 
-
 ## Removing members
 
-Both **Org Admin**s and **Billing Manager**s can remove members from your organization's Members tab in [Apollo Studio](https://studio.apollographql.com).
+Both **Org Admin**s and **Billing Manager**s can remove members from your organization's Members tab in [GraphOS Studio](https://studio.apollographql.com).
