--- a/src/content/technotes/TN0009-gateway-performance.mdx
+++ b/src/content/technotes/TN0009-gateway-performance.mdx
@@ -14,7 +14,7 @@ The Apollo Router is a high-throughput, low-latency Apollo Federation GraphQL ga
 
 ## Disable or reduce `ftv1` inline tracing
 
-Inline tracing (also known as federated tracing or `ftv1`) provides helpful field-level latency information in Apollo Studio, however it comes at a cost: trace information can be expensive to calculate, and it's attached to subgraph responses, increasing payload size.
+Inline tracing (also known as federated tracing or `ftv1`) provides helpful field-level latency information in GraphOS Studio, however it comes at a cost: trace information can be expensive to calculate, and it's attached to subgraph responses, increasing payload size.
 
 In Apollo Server 3.6 and later, you can set the `fieldLevelInstrumentation` option to disable inline tracing entirely, or limit tracing to a representative sample of all requests.
 
