--- a/src/content/technotes/TN0013-monolith-to-federation.mdx
+++ b/src/content/technotes/TN0013-monolith-to-federation.mdx
@@ -22,8 +22,8 @@ Here are the steps we recommend to convert a monolithic GraphQL API into a feder
 
 Start the process by making a "federated graph of one". Your existing monolith can act as a subgraph without any schema changes.
 
-1. If you're not already publishing your schema to Apollo Studio, create a new graph in your Studio organization. Choose "Supergraph" for your graph architecture.
-1. Publish your monolith schema to Apollo Studio as a subgraph with the following command (modify your `--routing-url` and `--schema` path as needed):
+1. If you're not already publishing your schema to GraphOS Studio, create a new graph in your Studio organization. Choose "Supergraph" for your graph architecture.
+1. Publish your monolith schema to GraphOS Studio as a subgraph with the following command (modify your `--routing-url` and `--schema` path as needed):
 
    ```sh
    rover subgraph publish --name monolith \
@@ -40,7 +40,7 @@ Start the process by making a "federated graph of one". Your existing monolith c
   />
 2. Set up [header propagation](/router/configuration/header-propagation/) so that the monolith receives any necessary headers from the router.
 3. Set up internal routing rules to redirect client requests to the Apollo Router instead of your monolith.
-4. Enable usage metrics reporting to Apollo Studio.
+4. Enable usage metrics reporting to GraphOS Studio.
 5. Add [subgraph checks](/graphos/delivery/schema-checks/) to your monolith's CI pipeline.
 
 At this point, client requests go to your new Apollo Router instead of the monolith, but it's serving the same schema so clients won't know the difference.
