--- a/src/content/technotes/TN0025-supergraph-stewardship.mdx
+++ b/src/content/technotes/TN0025-supergraph-stewardship.mdx
@@ -9,6 +9,7 @@ tags: [schema-design]
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Effective supergraph stewardship](https://www.apollographql.com/tutorials/effective-stewardship) course on Odyssey.
 
 Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 </Tip>
 
 Initial GraphQL adoption often emerges either from within a single team or a small number of teams, and at that scale, managing stewardship concerns may be handled on an informal basis. However, the move toward a unified supergraph requires a more intentional approach. Given the evolutionary nature of a supergraph, strong stewardship practices are needed to help maintain its integrity while simultaneously driving its adoption across teams.
@@ -54,7 +55,7 @@ The stewardship group should proactively establish performance best practices th
 
 It's a best practice for [clients to identify themselves by name and version](/technotes/TN0001-client-id-enforcement/) before querying data from the graph, and clients should also assign names to all of the operations they send to the API. Ideally, these operation names are defined using a shared naming scheme, so it will be the role of the graph stewardship group to set, communicate, and enforce these naming standards.
 
-Additionally, the stewardship group may wish to set standards for using query variables instead of literals as operation arguments. This measure will help minimize operation cardinality and take advantage of some of Apollo Studio's reporting optimizations in the gateway. And to guard against potentially abusive operations, the stewardship group may also put appropriate mechanisms in place to limit query depth, breadth, and overall cost.
+Additionally, the stewardship group may wish to set standards for using query variables instead of literals as operation arguments. This measure will help minimize operation cardinality and take advantage of some of GraphOS Studio's reporting optimizations in the gateway. And to guard against potentially abusive operations, the stewardship group may also put appropriate mechanisms in place to limit query depth, breadth, and overall cost.
 
 ## Onboarding and supporting teams
 
