--- a/src/content/technotes/TN0028-change-management.mdx
+++ b/src/content/technotes/TN0028-change-management.mdx
@@ -35,7 +35,7 @@ This guide assumes the general use of [Apollo GraphOS](/graphos/) and some of it
 
 - [Managed Federation](/federation/managed-federation/overview/) for propagating the supergraph schema to your Router at runtime
 - [Rover](/rover/) for publishing subgraph schemas and running [Schema Checks](/graphos/delivery/schema-checks)
-- [Apollo Studio](https://studio.apollographql.com/) for viewing GraphOS metrics and determining things like when it's safe to remove fields.
+- [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content) for viewing GraphOS metrics and determining things like when it's safe to remove fields.
 
 The release guidelines for each scenario should generally apply to all release management systems, whether we're deploying to Kubernetes, serverless, or bare metal. Some details might change depending on whether we have a manual deployment process, a continuous delivery process, or something in between.
 
@@ -51,6 +51,7 @@ A schema change is backward compatible if it doesn’t affect existing operation
 <Note>
 
 This also includes changes to schema metadata like adding or changing a deprecations or descriptions, but we won't consider these changes because they don’t affect runtime behavior.
+
 </Note>
 
 ### Release steps
@@ -99,6 +100,7 @@ If the build check against the `current` variant fails, we'll need to coordinate
 <Note>
 
 The longer the time between merging and releasing our change, the more important it is to track changes using the `current` variant. On the other hand, if we have a continuous delivery release process and the time between merge and release is relatively short, it's less likely for teams to introduce incompatible changes with unreleased subgraph schemas.
+
 </Note>
 
 ### Rollbacks
@@ -131,13 +133,15 @@ Instead of attempting rollbacks of schema changes, we may want to release our ch
 <Tip>
 
 Read more on [contracts usage patterns](/technotes/TN0014-contracts-patterns/).
+
 </Tip>
 
 <Tip>
 
 If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Contracts](https://www.apollographql.com/tutorials/contracts) course on Odyssey.
 
- Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+
 </Tip>
 
 ## Backward incompatible subgraph schema changes
@@ -151,13 +155,14 @@ Crucially, if a schema element is unused, this does _not_ qualify as a backward 
 The release steps for backward incompatible changes are similar to those for backward compatible changes, only with some important pre-work:
 
 1. Use the `@deprecated` directive to communicate with clients that schema elements should no longer be relied on.
-2. Use Apollo Studio to track the usage of types and fields. Reach out to clients [identified][clientids] as performing the affected operations before releasing the change.
+2. Use GraphOS Studio to track the usage of types and fields. Reach out to clients [identified][clientids] as performing the affected operations before releasing the change.
 3. Continue to track usage until it reaches zero (or to a minimally acceptable level, for example, where a field is still in use by an older version of a mobile application that is no longer supported).
 4. [Perform the release steps for a backward compatible change](#release-steps).
 
 <Tip>
 
 Consider enforcing that all requests to your supergraph have the proper identification headers. These identifiers enable the metrics that allow you to make potentially breaking changes with confidence. Read more about [Client Awareness here][clientids]. See [Client Id Enforcement](/technotes/TN0001-client-id-enforcement) for an example implementation.
+
 </Tip>
 
 [clientids]: /graphos/metrics/client-awareness
